Update sql_com.md